--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-<div id="MainApp"></div>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Moving Average</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+</head>
+
+<body>
+    <div id="MainApp"></div>
+</body>
+
+</html>
