--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><link href="/static/css/main.077fb3ff.css" rel="stylesheet"></head><div id="MainApp"></div><script type="text/javascript" src="/static/js/main.6be814b8.js"></script>
+<head><link href="/moving-average/static/css/main.077fb3ff.css" rel="stylesheet"></head><div id="MainApp"></div><script type="text/javascript" src="/moving-average/static/js/main.b7fcb5fe.js"></script>
